--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,13 @@
 .vscode/**
 .vscode-test/**
+out/test/**
 test/**
-.gitignore
-vsc-extension-quickstart.md
-**/jsconfig.json
+src/**
 **/*.map
-**/.eslintrc.json
+.gitignore
+tsconfig.json
+vsc-extension-quickstart.md
 .history
-yarn.*
+jsconfig.json
+.eslintrc.json
+node_modules/
