--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "close-files",
     "displayName": "Close Files",
-    "description": "close files",
+    "description": "close same folder files",
     "version": "0.1.1",
     "repository": "https://github.com/ctf0/vscode-close-files",
     "publisher": "ctf0",
